@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0

title Class Diagram — US062 List Active Collaborators by Customer

package "Presentation" <<Rectangle>> {
    class ListCollaboratorsByCustomerUI {
        +doShow() : boolean
        +headline() : String
        -showByCompany()
        -showByArea()
        -printCollaborators(Iterable<Collaborator>)
    }
}

package "Application" <<Rectangle>> {
    class ListCollaboratorsByCustomerController <<UseCaseController>> {
        -authz : AuthorizationService
        -collaboratorRepo : CollaboratorRepository
        -companyRepo : AirTransportCompanyRepository
        -areaRepo : AirControlAreaRepository
        +allCompanies() : Iterable<AirTransportCompany>
        +allAreas() : Iterable<AirControlArea>
        +listActiveByCompany(AirTransportCompany) : Iterable<Collaborator>
        +listActiveByArea(AirControlArea) : Iterable<Collaborator>
    }
}

package "Domain" <<Rectangle>> {
    interface CollaboratorRepository {
        +findByAirTransportCompany(AirTransportCompany) : Iterable<Collaborator>
        +findByAirControlArea(AirControlArea) : Iterable<Collaborator>
        +findBySystemUser(SystemUser) : Optional<Collaborator>
    }

    class Collaborator <<entity, aggregate root>> {
        +user() : User
        +airTransportCompany() : AirTransportCompany
        +airControlArea() : AirControlArea
        +isCompanyCollaborator() : boolean
        +isAreaCollaborator() : boolean
        +isActive() : boolean
        +customerName() : String
    }
}

package "Persistence" <<Rectangle>> {
    class InMemoryCollaboratorRepository {
        +findByAirTransportCompany(AirTransportCompany) : Iterable<Collaborator>
        +findByAirControlArea(AirControlArea) : Iterable<Collaborator>
        +findBySystemUser(SystemUser) : Optional<Collaborator>
    }

    class JpaCollaboratorRepository {
        +findByAirTransportCompany(AirTransportCompany) : Iterable<Collaborator>
        +findByAirControlArea(AirControlArea) : Iterable<Collaborator>
        +findBySystemUser(SystemUser) : Optional<Collaborator>
    }
}

ListCollaboratorsByCustomerUI --> ListCollaboratorsByCustomerController
ListCollaboratorsByCustomerController --> CollaboratorRepository
CollaboratorRepository <|.. InMemoryCollaboratorRepository
CollaboratorRepository <|.. JpaCollaboratorRepository
CollaboratorRepository ..> Collaborator

@enduml
